fix(molecule/buttonGroup): fix some misalignments

--- a/components/molecule/buttonGroup/src/index.scss
+++ b/components/molecule/buttonGroup/src/index.scss
@@ -1,4 +1,5 @@
 .sui-MoleculeButtonGroup {
+  display: flex;
   &--fullWidth {
     display: flex;
   }
